LRIS-23206 Added full-width-image utility class and fixed full width image overflow on Outlook

--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -18,6 +18,20 @@
 	font-weight: 600;
 }
 
+// https://templates.mailchimp.com/development/responsive-email/fluid-images/
+.full-width-image {
+	width: 100%;
+	height: auto;
+}
+
+@media only screen and (max-width: 500px){
+        .emailImage{
+            height:auto !important;
+            max-width:600px !important;
+            width: 100% !important;
+        }
+    }
+
 .no-margin-horizontal {
 	margin-left: 0;
 	margin-right: 0;
