--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1379,6 +1379,16 @@ p.quote {
 .font-weight-bold {
   font-weight: 600; }
 
+.full-width-image {
+  width: 100%;
+  height: auto; }
+
+@media only screen and (max-width: 500px) {
+  .emailImage {
+    height: auto !important;
+    max-width: 600px !important;
+    width: 100% !important; } }
+
 .no-margin-horizontal {
   margin-left: 0;
   margin-right: 0; }
